feat: implement validation for email and phone fields, enhance error handling, and add global exception handler

--- a/immobiliaris-be/src/main/resources/static/index.html
+++ b/immobiliaris-be/src/main/resources/static/index.html
@@ -1135,6 +1135,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
+    <script src="./js/validation-utils.js"></script>
     <script src="/js/swiper-config.js"></script>
     <script src="./js/login.js"></script>
     <script src="./js/faq.js"></script>
