--- a/immobiliaris-be/src/main/resources/static/login.html
+++ b/immobiliaris-be/src/main/resources/static/login.html
@@ -10,6 +10,7 @@
   <link href="styles/style-tailwind.css" rel="stylesheet" />
 
   <!-- Auth Utils -->
+  <script src="js/validation-utils.js"></script>
   <script src="js/auth-utils.js"></script>
   <script src="js/login.js" defer></script>
 
