--- a/immobiliaris-be/src/main/resources/static/admin.html
+++ b/immobiliaris-be/src/main/resources/static/admin.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard - Immobiliaris</title>
     <link href="styles/style-tailwind.css" rel="stylesheet">
+    <script src="js/validation-utils.js"></script>
     <script src="js/auth-utils.js"></script>
     <script src="js/admin.js" defer></script>
     <style>
