--- a/immobiliaris-be/src/main/resources/static/user.html
+++ b/immobiliaris-be/src/main/resources/static/user.html
@@ -7,6 +7,7 @@
   
   <link href="styles/style-tailwind.css" rel="stylesheet">
   
+  <script src="js/validation-utils.js"></script>
   <script src="js/auth-utils.js"></script>
   
   <script src="js/user.js" defer></script>
