--- a/immobiliaris-be/src/main/resources/static/index.html
+++ b/immobiliaris-be/src/main/resources/static/index.html
@@ -149,15 +149,41 @@
                     <!-- Form Valutazione Multi-step -->
                     <div class="bg-white border border-gray-300 rounded-xl p-6 shadow-lg">
 
+                        <!-- Step 0: Sei già registrato? -->
+                        <div id="step-0" class="form-step active">
+                            <h3 class="text-xl md:text-2xl font-bold text-my-black mb-6 text-center">Sei già registrato?</h3>
+                            <p class="text-gray-600 text-center mb-8">Scegli un'opzione per continuare</p>
+
+                            <div class="grid grid-cols-2 gap-4">
+                                <div class="registration-choice group cursor-pointer bg-white border-2 border-gray-100 rounded-xl p-6 flex flex-col items-center justify-center gap-3 hover:border-green-300 transition-all duration-200"
+                                     data-choice="yes">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-gray-400 group-hover:text-my-green-dark transition-colors" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                    </svg>
+                                    <span class="font-bold text-gray-600 text-lg group-hover:text-my-green-dark transition-colors">Sì</span>
+                                    <span class="text-xs text-gray-500 text-center">Ho già un account</span>
+                                </div>
+
+                                <div class="registration-choice group cursor-pointer bg-white border-2 border-gray-100 rounded-xl p-6 flex flex-col items-center justify-center gap-3 hover:border-orange-300 transition-all duration-200"
+                                     data-choice="no">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-gray-400 group-hover:text-my-orange transition-colors" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18 9v3m0 0v3m0-3h3m-3 0h-3m-2-5a4 4 0 11-8 0 4 4 0 018 0zM3 20a6 6 0 0112 0v1H3v-1z" />
+                                    </svg>
+                                    <span class="font-bold text-gray-600 text-lg group-hover:text-my-orange transition-colors">No</span>
+                                    <span class="text-xs text-gray-500 text-center">Voglio registrarmi</span>
+                                </div>
+                            </div>
+                        </div>
+
                         <!-- Progress Bar -->
-                        <div class="mb-6">
+                        <div class="mb-6" id="progress-container" style="display: none;">
                             <div class="flex justify-between items-center mb-2">
-                                <span class="text-sm font-semibold text-gray-700" id="step-indicator">Step 1 di 3</span>
+                                <span class="text-sm font-semibold text-gray-700" id="step-indicator">Step 1 di 5</span>
                                 <span class="text-sm text-gray-500">Compila tutti i campi</span>
                             </div>
                             <div class="w-full bg-gray-200 rounded-full h-2">
                                 <div id="progress-bar" class="bg-my-orange h-2 rounded-full transition-all duration-300"
-                                    style="width: 33%"></div>
+                                    style="width: 20%"></div>
                             </div>
                         </div>
 
@@ -196,7 +222,7 @@
                             <form id="valutazione-form">
 
                                 <!-- Step 1: Dati Personali -->
-                                <div id="step-1" class="form-step active">
+                                <div id="step-1" class="form-step hidden">
                                     <h3 class="text-lg font-bold text-my-black mb-4">I tuoi dati</h3>
 
                                     <div class="grid grid-cols-1 gap-4">
@@ -1136,6 +1162,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
     <script src="./js/validation-utils.js"></script>
+    <script src="./js/auth-utils.js"></script>
     <script src="/js/swiper-config.js"></script>
     <script src="./js/login.js"></script>
     <script src="./js/faq.js"></script>
