--- a/immobiliaris-be/src/main/resources/static/user.html
+++ b/immobiliaris-be/src/main/resources/static/user.html
@@ -98,8 +98,20 @@
       <div class="p-6 lg:p-12">
       
       <div class="mb-8">
-        <h1 class="text-3xl font-bold text-my-green-dark">Benvenuto</h1>
-        <p class="text-gray-600 border-b-2 pb-4">Ecco il riepilogo delle tue attività immobiliari.</p>
+        <div class="flex justify-between items-center">
+          <div>
+            <h1 class="text-3xl font-bold text-my-green-dark">Benvenuto</h1>
+            <p class="text-gray-600">Ecco il riepilogo delle tue attività immobiliari.</p>
+          </div>
+          <a href="index.html?mode=logged" 
+             class="flex items-center gap-2 py-3 px-6 text-sm font-bold bg-my-orange text-white rounded-full shadow-lg hover:bg-my-green-dark hover:-translate-y-0.5 transition-all duration-300">
+            <svg class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" />
+            </svg>
+            Richiedi Nuova Valutazione
+          </a>
+        </div>
+        <div class="border-b-2 pb-4 mt-4"></div>
       </div>
 
       <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-10">
