--- a/immobiliaris-be/src/main/resources/static/admin.html
+++ b/immobiliaris-be/src/main/resources/static/admin.html
@@ -78,7 +78,7 @@
             </div>
         </div>
 
-        <div class="flex flex-1 lg:flex-row">
+        <div class="flex flex-1 flex-col lg:flex-row">
 
         <aside id="sidebar" class="bg-my-cream text-my-black w-full lg:w-72 flex-shrink-0 shadow-2xl z-20 flex flex-col self-stretch">
             
