mail link in home, admin, login page

--- a/immobiliaris-be/src/main/resources/static/index.html
+++ b/immobiliaris-be/src/main/resources/static/index.html
@@ -28,13 +28,13 @@
     <div class="bg-my-green-dark text-my-cream text-xs py-2.5">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex justify-between items-center">
             <div class="flex items-center space-x-6">
-                <a href="mailto:immobiliarishelp@gmail.com" class="flex items-center hover:text-white transition-colors">
+                <button class="open-gmail-btn flex items-center hover:text-white transition-colors" data-email="immobiliarishelp@gmail.com">
                     <svg class="w-4 h-4 mr-2 opacity-80" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                     </svg>
-                    <span class="hidden sm:inline">info@immobiliaris.it</span>
-                </a>
+                    <span class="hidden sm:inline">immobiliarishelp@gmail.com</span>
+                </button>
                 <a href="tel:+39011123456" class="flex items-center hover:text-white transition-colors">
                     <svg class="w-4 h-4 mr-2 opacity-80" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -1116,10 +1116,9 @@
                 <div class="md:text-right">
                     <h5 class="text-lg font-bold text-white mb-6">Resta in Contatto</h5>
                     <p class="text-gray-400 text-sm mb-2">Hai domande? Scrivici a:</p>
-                    <a href="mailto:info@immobiliaris.it"
-                        class="text-my-orange font-semibold hover:text-white transition-colors mb-6 inline-block">
-                        info@immobiliaris.it
-                    </a>
+                    <button class="open-gmail-btn text-my-orange font-semibold hover:text-white transition-colors mb-6 inline-block" data-email="immobiliarishelp@gmail.com" style="background: none; border: none; padding: 0; cursor: pointer;">
+                        immobiliarishelp@gmail.com
+                    </button>
 
                     <div class="flex justify-start md:justify-end gap-4 mt-4">
                         <a href="#"
