--- a/immobiliaris-be/src/main/resources/static/user.html
+++ b/immobiliaris-be/src/main/resources/static/user.html
@@ -224,11 +224,11 @@
         </div>
 
         <div class="border-t border-gray-700 pt-8 mt-8 flex flex-col md:flex-row justify-between items-center text-xs text-gray-500">
-          <p>&copy; 2024 Immobiliaris S.r.l. - P.IVA 12345678901 - Tutti i diritti riservati.</p>
+          <p>&copy; 2025 Immobiliaris S.r.l. - P.IVA 12345678901 - Tutti i diritti riservati.</p>
           <div class="flex space-x-4 mt-4 md:mt-0">
-            <a href="#" class="hover:text-white transition-colors">Privacy Policy</a>
-            <a href="#" class="hover:text-white transition-colors">Cookie Policy</a>
-            <a href="#" class="hover:text-white transition-colors">Termini di Servizio</a>
+            <a class="hover:text-white transition-colors">Privacy Policy</a>
+            <a class="hover:text-white transition-colors">Cookie Policy</a>
+            <a class="hover:text-white transition-colors">Termini di Servizio</a>
           </div>
         </div>
       </div>
