--- a/immobiliaris-be/src/main/resources/static/index.html
+++ b/immobiliaris-be/src/main/resources/static/index.html
@@ -1172,8 +1172,8 @@
 
                 <div class="space-y-4">
                     <div class="flex items-center gap-2 mb-4">
-                        <img src="./assets/logooo.svg" alt="Logo Immobiliaris" class="h-20 w-20">
-                        
+                        <img src="./assets/logo.svg" alt="Immobiliaris Logo" class="h-10 w-10 object-contain" />
+                        <span class="text-2xl font-bold tracking-tight font-cinzel-dec">immoBiliaRis</span>
                     </div>
                     <p class="text-gray-400 leading-relaxed text-sm">
                         Il nostro core business è impegnarci ogni giorno per offrire valutazioni precise e soluzioni di
