--- a/immobiliaris-be/src/main/resources/static/login.html
+++ b/immobiliaris-be/src/main/resources/static/login.html
@@ -40,16 +40,17 @@
   </style>
 </head>
 
-<body class="font-sans text-my-black antialiased">
+<body class="font-montserrat text-my-black antialiased">
   <div class="bg-my-green-dark text-my-cream text-xs py-2.5">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex justify-between items-center">
       <div class="flex items-center space-x-6">
-        <button class="open-gmail-btn flex items-center hover:text-white transition-colors" data-email="immobiliarishelp@gmail.com">
-            <svg class="w-4 h-4 mr-2 opacity-80" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
-            </svg>
-            <span class="hidden sm:inline">immobiliarishelp@gmail.com</span>
+        <button class="open-gmail-btn flex items-center hover:text-white transition-colors"
+          data-email="immobiliarishelp@gmail.com">
+          <svg class="w-4 h-4 mr-2 opacity-80" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+          </svg>
+          <span class="hidden sm:inline">immobiliarishelp@gmail.com</span>
         </button>
         <a href="tel:+39011123456" class="flex items-center hover:text-white transition-colors">
           <svg class="w-4 h-4 mr-2 opacity-80" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -96,28 +97,28 @@
                 href="#">Contatti</a>
             </li> -->
 
-            <!-- <li class="h-6 w-px bg-gray-300"></li> -->
+        <!-- <li class="h-6 w-px bg-gray-300"></li> -->
 
-              <a href="#"
-                class="flex items-center gap-2 py-2.5 px-5 text-sm font-bold bg-my-green-dark text-white rounded-full shadow-lg hover:bg-my-orange hover:-translate-y-0.5 transition-all duration-300">
-                <svg class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
-                </svg>
-                Area Riservata
-              </a>
-          </ul>
-        </div>
-
-        <div class="flex items-center lg:hidden">
-          <button id="mobile-menu-btn" class="text-my-green-dark hover:text-my-orange focus:outline-none">
-            <svg class="w-8 h-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-            </svg>
-          </button>
-        </div>
-
+        <a href="#"
+          class="flex items-center gap-2 py-2.5 px-5 text-sm font-bold bg-my-green-dark text-white rounded-full shadow-lg hover:bg-my-orange hover:-translate-y-0.5 transition-all duration-300">
+          <svg class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
+          </svg>
+          Area Riservata
+        </a>
+        </ul>
       </div>
+
+      <div class="flex items-center lg:hidden">
+        <button id="mobile-menu-btn" class="text-my-green-dark hover:text-my-orange focus:outline-none">
+          <svg class="w-8 h-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+          </svg>
+        </button>
+      </div>
+
+    </div>
     </div>
 
     <div id="mobile-menu" class="hidden lg:hidden bg-white border-t border-gray-100 absolute w-full shadow-xl">
@@ -182,92 +183,96 @@
       <p class="text-sm text-gray-400 text-center mt-6">© 2025 Immobiliaris</p>
     </div>
   </div>
-  <footer class="bg-my-green-dark text-white border-t border-white/10">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 pt-16 pb-8">
+  <footer id="contatti" class="bg-my-green-dark text-white border-t border-white/10">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 pt-16 pb-8">
 
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-12 mb-12">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-12 mb-12">
 
-        <div class="space-y-4">
-          <div class="flex items-center gap-2 mb-4">
-            <img src="./assets/logo.svg" alt="Immobiliaris Logo" class="h-10 w-10 object-contain" />
-            <span class="text-2xl font-bold tracking-tight">Immobiliaris</span>
-          </div>
-          <p class="text-gray-400 leading-relaxed text-sm">
-            Il nostro core business è impegnarci ogni giorno per offrire valutazioni precise e soluzioni di
-            qualità, garantendo trasparenza in ogni compravendita.
-          </p>
+                <div class="space-y-4">
+                    <div class="flex items-center gap-2 mb-4">
+                        <img src="./assets/logo.svg" alt="Immobiliaris Logo" class="h-10 w-10 object-contain" />
+                        <span class="text-2xl font-bold tracking-tight font-cinzel-dec">immoBiliaRis</span>
+                    </div>
+                    <p class="text-gray-400 leading-relaxed text-sm">
+                        Il nostro core business è impegnarci ogni giorno per offrire valutazioni precise e soluzioni di
+                        qualità, garantendo trasparenza in ogni compravendita.
+                    </p>
+                </div>
+
+                <div>
+                    <h5 class="text-lg font-bold text-white mb-6">Navigazione Veloce</h5>
+                    <ul class="space-y-3 text-sm">
+                        <li>
+                            <a href="#"
+                                class="text-gray-400 hover:text-my-orange transition-colors duration-200 flex items-center">
+                                <span class="mr-2">›</span> Home
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#"
+                                class="text-gray-400 hover:text-my-orange transition-colors duration-200 flex items-center">
+                                <span class="mr-2">›</span> I Nostri Servizi
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#"
+                                class="text-gray-400 hover:text-my-orange transition-colors duration-200 flex items-center">
+                                <span class="mr-2">›</span> Vantaggi
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#"
+                                class="text-gray-400 hover:text-my-orange transition-colors duration-200 flex items-center">
+                                <span class="mr-2">›</span> Contattaci
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="md:text-right">
+                    <h5 class="text-lg font-bold text-white mb-6">Resta in Contatto</h5>
+                    <p class="text-gray-400 text-sm mb-2">Hai domande? Scrivici a:</p>
+                    <button class="open-gmail-btn text-my-orange font-semibold hover:text-white transition-colors mb-6 inline-block" data-email="immobiliarishelp@gmail.com" style="background: none; border: none; padding: 0; cursor: pointer;">
+                        immobiliarishelp@gmail.com
+                    </button>
+
+                    <div class="flex justify-start md:justify-end gap-4 mt-4">
+                        <a href="#"
+                            class="w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-my-orange transition-all duration-300 group">
+                            <svg class="w-5 h-5 text-white group-hover:scale-110 transition-transform"
+                                fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                                <path fill-rule="evenodd"
+                                    d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                        </a>
+                        <a href="#"
+                            class="w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-my-orange transition-all duration-300 group">
+                            <svg class="w-5 h-5 text-white group-hover:scale-110 transition-transform"
+                                fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                                <path fill-rule="evenodd"
+                                    d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.067.06 1.407.06 4.123v.08c0 2.643-.012 2.987-.06 4.043-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.067.048-1.407.06-4.123.06h-.08c-2.643 0-2.987-.012-4.043-.06-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.047-1.024-.06-1.379-.06-3.808v-.63c0-2.43.013-2.784.06-3.808.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772 4.902 4.902 0 011.772-1.153c.636-.247 1.363-.416 2.427-.465C9.673 2.013 10.03 2 12.48 2h.165zm-9 2.192c-1.04 0-1.53.05-1.886.188-.47.183-.81.522-.993.992-.138.356-.188.846-.188 1.886v9.484c0 1.04.05 1.53.188 1.886.183.47.522.81.992.993.356.138.846.188 1.886.188h9.484c1.04 0 1.53-.05 1.886-.188.47-.183.81-.522.993-.992.138-.356.188-.846.188-1.886v-9.484c0-1.04-.05-1.53-.188-1.886-.183-.47-.522-.81-.992-.993-.356-.138-.846-.188-1.886-.188H5.484z"
+                                    clip-rule="evenodd" />
+                                <path fill-rule="evenodd"
+                                    d="M12.315 7.815a4.5 4.5 0 100 9 4.5 4.5 0 000-9zm0 2a2.5 2.5 0 110 5 2.5 2.5 0 010-5z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div
+                class="border-t border-gray-700 pt-8 mt-8 flex flex-col md:flex-row justify-between items-center text-xs text-gray-500">
+                <p>&copy; 2025 Immobiliaris S.r.l. - P.IVA 12345678901 - Tutti i diritti riservati.</p>
+                <div class="flex space-x-4 mt-4 md:mt-0">
+                    <a class="hover:text-white transition-colors">Privacy Policy</a>
+                    <a class="hover:text-white transition-colors">Cookie Policy</a>
+                    <a class="hover:text-white transition-colors">Termini di Servizio</a>
+                </div>
+            </div>
         </div>
-
-        <div>
-          <h5 class="text-lg font-bold text-white mb-6">Navigazione Veloce</h5>
-          <ul class="space-y-3 text-sm">
-            <li>
-              <a href="index.html" class="text-gray-400 hover:text-my-orange transition-colors duration-200 flex items-center">
-                <span class="mr-2">›</span> Home
-              </a>
-            </li>
-            <li>
-              <a href="index.html#servizi" class="text-gray-400 hover:text-my-orange transition-colors duration-200 flex items-center">
-                <span class="mr-2">›</span> I Nostri Servizi
-              </a>
-            </li>
-            <li>
-              <a href="index.html#approfondimento" class="text-gray-400 hover:text-my-orange transition-colors duration-200 flex items-center">
-                <span class="mr-2">›</span> Vantaggi
-              </a>
-            </li>
-            <li>
-              <a href="index.html#contatti" class="text-gray-400 hover:text-my-orange transition-colors duration-200 flex items-center">
-                <span class="mr-2">›</span> Contattaci
-              </a>
-            </li>
-          </ul>
-        </div>
-
-        <div class="md:text-right">
-          <h5 class="text-lg font-bold text-white mb-6">Resta in Contatto</h5>
-          <p class="text-gray-400 text-sm mb-2">Hai domande? Scrivici a:</p>
-          <button class="open-gmail-btn text-my-orange font-semibold hover:text-white transition-colors mb-6 inline-block" data-email="immobiliarishelp@gmail.com" style="background: none; border: none; padding: 0; cursor: pointer;">
-              immobiliarishelp@gmail.com
-          </button>
-
-          <div class="flex justify-start md:justify-end gap-4 mt-4">
-            <a href="#"
-              class="w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-my-orange transition-all duration-300 group">
-              <svg class="w-5 h-5 text-white group-hover:scale-110 transition-transform" fill="currentColor"
-                viewBox="0 0 24 24" aria-hidden="true">
-                <path fill-rule="evenodd"
-                  d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z"
-                  clip-rule="evenodd" />
-              </svg>
-            </a>
-            <a href="#"
-              class="w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-my-orange transition-all duration-300 group">
-              <svg class="w-5 h-5 text-white group-hover:scale-110 transition-transform" fill="currentColor"
-                viewBox="0 0 24 24" aria-hidden="true">
-                <path fill-rule="evenodd"
-                  d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.067.06 1.407.06 4.123v.08c0 2.643-.012 2.987-.06 4.043-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.067.048-1.407.06-4.123.06h-.08c-2.643 0-2.987-.012-4.043-.06-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.047-1.024-.06-1.379-.06-3.808v-.63c0-2.43.013-2.784.06-3.808.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772 4.902 4.902 0 011.772-1.153c.636-.247 1.363-.416 2.427-.465C9.673 2.013 10.03 2 12.48 2h.165zm-9 2.192c-1.04 0-1.53.05-1.886.188-.47.183-.81.522-.993.992-.138.356-.188.846-.188 1.886v9.484c0 1.04.05 1.53.188 1.886.183.47.522.81.992.993.356.138.846.188 1.886.188h9.484c1.04 0 1.53-.05 1.886-.188.47-.183.81-.522.993-.992.138-.356.188-.846.188-1.886v-9.484c0-1.04-.05-1.53-.188-1.886-.183-.47-.522-.81-.992-.993-.356-.138-.846-.188-1.886-.188H5.484z"
-                  clip-rule="evenodd" />
-                <path fill-rule="evenodd"
-                  d="M12.315 7.815a4.5 4.5 0 100 9 4.5 4.5 0 000-9zm0 2a2.5 2.5 0 110 5 2.5 2.5 0 010-5z"
-                  clip-rule="evenodd" />
-              </svg>
-            </a>
-          </div>
-        </div>
-      </div>
-
-      <div
-        class="border-t border-gray-700 pt-8 mt-8 flex flex-col md:flex-row justify-between items-center text-xs text-gray-500">
-        <p>&copy; 2025 Immobiliaris S.r.l. - P.IVA 12345678901 - Tutti i diritti riservati.</p>
-        <div class="flex space-x-4 mt-4 md:mt-0">
-          <a class="hover:text-white transition-colors">Privacy Policy</a>
-          <a class="hover:text-white transition-colors">Cookie Policy</a>
-          <a class="hover:text-white transition-colors">Termini di Servizio</a>
-        </div>
-      </div>
-    </div>
-  </footer>
+    </footer>
 </body>
 
 </html>
