homepage link fix

--- a/immobiliaris-be/src/main/resources/static/index.html
+++ b/immobiliaris-be/src/main/resources/static/index.html
@@ -860,7 +860,7 @@
     </section>
 
 
-    <section class="py-16 text-my-black bg-my-green-light/30 relative overflow-hidden">
+    <section id="vantaggi" class="py-16 text-my-black bg-my-green-light/30 relative overflow-hidden">
         
 
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -1232,19 +1232,19 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#"
+                            <a href="#servizi"
                                 class="text-gray-400 hover:text-my-orange transition-colors duration-200 flex items-center">
                                 <span class="mr-2">›</span> I Nostri Servizi
                             </a>
                         </li>
                         <li>
-                            <a href="#"
+                            <a href="#vantaggi"
                                 class="text-gray-400 hover:text-my-orange transition-colors duration-200 flex items-center">
                                 <span class="mr-2">›</span> Vantaggi
                             </a>
                         </li>
                         <li>
-                            <a href="#"
+                            <a href="#contatti"
                                 class="text-gray-400 hover:text-my-orange transition-colors duration-200 flex items-center">
                                 <span class="mr-2">›</span> Contattaci
                             </a>
@@ -1260,7 +1260,7 @@
                     </button>
 
                     <div class="flex justify-start md:justify-end gap-4 mt-4">
-                        <a href="#"
+                        <a
                             class="w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-my-orange transition-all duration-300 group">
                             <svg class="w-5 h-5 text-white group-hover:scale-110 transition-transform"
                                 fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
@@ -1269,7 +1269,7 @@
                                     clip-rule="evenodd" />
                             </svg>
                         </a>
-                        <a href="#"
+                        <a
                             class="w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-my-orange transition-all duration-300 group">
                             <svg class="w-5 h-5 text-white group-hover:scale-110 transition-transform"
                                 fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
