--- a/immobiliaris-be/src/main/resources/static/index.html
+++ b/immobiliaris-be/src/main/resources/static/index.html
@@ -1238,7 +1238,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#vantaggi"
+                            <a href="#approfondimento"
                                 class="text-gray-400 hover:text-my-orange transition-colors duration-200 flex items-center">
                                 <span class="mr-2">›</span> Vantaggi
                             </a>
