--- a/immobiliaris-be/src/main/resources/static/user.html
+++ b/immobiliaris-be/src/main/resources/static/user.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Area Personale - Immobiliaris</title>
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&family=Cinzel+Decorative:wght@400;700;900&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
   <link href="styles/style-tailwind.css" rel="stylesheet">
 
   <script src="js/validation-utils.js"></script>
@@ -20,7 +24,7 @@
 
     <!-- Barra contatti estesa su tutta la larghezza -->
     <div class="bg-my-green-dark text-my-cream text-xs py-2.5">
-      <div class="px-4 sm:px-6 lg:px-8 flex justify-between items-center">
+      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex justify-between items-center">
         <div class="flex items-center space-x-6">
           <button class="open-gmail-btn flex items-center hover:text-white transition-colors"
             data-email="immobiliarishelp@gmail.com">
@@ -28,7 +32,7 @@
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                 d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
             </svg>
-            <span class="hidden sm:inline">immobiliarishelp@gmail.com</span>
+            <span class="hidden lg:inline">immobiliarishelp@gmail.com</span>
           </button>
           <a href="tel:+39011123456" class="flex items-center hover:text-white transition-colors">
             <svg class="w-4 h-4 mr-2 opacity-80" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -96,7 +100,7 @@
             <div class="flex justify-between items-center h-20">
               <a href="index.html" class="flex items-center gap-2 group">
                 <img src="./assets/logo.svg" alt="Immobiliaris Logo" class="h-10 w-10 object-contain" />
-                <span class="text-2xl font-bold tracking-tight text-my-green-dark">Immobiliaris</span>
+                <span class="font-cinzel-dec text-my-green-dark font-bold">Immobiliaris</span>
               </a>
               <div class="flex items-center gap-2 px-4 py-2 bg-my-green-dark/5 rounded-lg">
                 <span class="text-sm font-semibold text-my-green-dark">Area Personale</span>
@@ -182,8 +186,10 @@
 
           <div class="space-y-4">
             <div class="flex items-center gap-2 mb-4">
-              <img src="./assets/logo.svg" alt="Immobiliaris Logo" class="h-10 w-10 object-contain" />
-              <span class="text-2xl font-bold tracking-tight font-cinzel-dec">immoBiliaRis</span>
+              <a href="index.html" class="flex items-center gap-2 group">
+                <img src="./assets/logo.svg" alt="Immobiliaris Logo" class="h-16 w-16 object-contain" />
+                <span class="font-cinzel-dec text-white font-bold">Immobiliaris</span>
+              </a>
             </div>
             <p class="text-gray-400 leading-relaxed text-sm">
               Il nostro core business è impegnarci ogni giorno per offrire valutazioni precise e soluzioni di
@@ -195,22 +201,22 @@
             <h5 class="text-lg font-bold text-white mb-6">Navigazione Veloce</h5>
             <ul class="space-y-3 text-sm">
               <li>
-                <a href="#" class="text-gray-400 hover:text-my-orange transition-colors duration-200 flex items-center">
+                <a href="index.html" class="text-gray-400 hover:text-my-orange transition-colors duration-200 flex items-center">
                   <span class="mr-2">›</span> Home
                 </a>
               </li>
               <li>
-                <a href="#" class="text-gray-400 hover:text-my-orange transition-colors duration-200 flex items-center">
+                <a href="index.html#servizi" class="text-gray-400 hover:text-my-orange transition-colors duration-200 flex items-center">
                   <span class="mr-2">›</span> I Nostri Servizi
                 </a>
               </li>
               <li>
-                <a href="#" class="text-gray-400 hover:text-my-orange transition-colors duration-200 flex items-center">
+                <a href="index.html#approfondimento" class="text-gray-400 hover:text-my-orange transition-colors duration-200 flex items-center">
                   <span class="mr-2">›</span> Vantaggi
                 </a>
               </li>
               <li>
-                <a href="#" class="text-gray-400 hover:text-my-orange transition-colors duration-200 flex items-center">
+                <a href="index.html#contatti" class="text-gray-400 hover:text-my-orange transition-colors duration-200 flex items-center">
                   <span class="mr-2">›</span> Contattaci
                 </a>
               </li>
